# digital-persona

./: .gitattributes  .gitignore  AGENTS.md  INTRODUCTION.md  LICENSE  MISSION.md  README.md  persona_config.example.json  pyproject.toml  pytest.ini
.devcontainer/: .env.example  README.md  devcontainer.json
.github/workflows/: pages.yml  test.yml
data/: my_notes.txt  sample_data.json  sample_page.html
docs/: Designing User Interfaces for Digital Clones.md  Ethical Legal and Philosophical Implications.md  Representing Personal Data and Personality Traits - Existing JSON-Semantic Standards.md  Scientifically Grounded Personality Tests and Their Evolution into Digital Personas.md  index.md
docs/research/: Representing Personal Data and Personality Traits - Existing JSON-Semantic Standards.md
schema/context/: personality-context.jsonld
schema/ontologies/: trait-vocabulary.md
schema/schemas/: dark-triad.json  goal-schema.json  mbti-type.json  mmpi-scales.json  narrative-schema.json  personality-interview.json  personality-traits.json  values-schema.json
schema/tests/: test_all_schemas.py  test_dark_triad_schema.py  test_interview_schema.py  test_mbti_schema.py  test_mmpi_schema.py  test_trait_schema.py
scripts/: generate_samples.py  start-api.py  start-api.sh  start-services.py
src/digital_persona/: __init__.py  api.py  config.py  decrypt.py  ingest.py  interview.py  limitless.py  mcp_server.py  secure_storage.py
src/digital_persona/mcp_plugins/: limitless.py
src/digital_persona/utils/: filename.py
src/frontend/: index.html  styles.css
src/plugins/: limitless.py
tests/: test_api.py  test_config.py  test_decrypt.py  test_ingest.py  test_interviewer.py  test_limitless.py  test_mcp_server.py  test_trait_schema.py
utils/: trait_helpers.py
