[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[project]
name = "digital-persona"
version = "0.1.0"
description = "Schemas and utilities for building digital personality profiles"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {file = "LICENSE"}
authors = [
    { name = "Eric Hackathorn", email = "erichackathorn@gmail.com" }
]
dependencies = [
    "langchain",
    "openai",
    "langchain-community",
    "jsonschema",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "referencing (>=0.36.2,<0.37.0)",
]

[project.scripts]
digital-persona-interview = "digital_persona.interview:_cli"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.poetry.scripts]
test = "pytest"

[project.urls]
Homepage = "https://github.com/hackshaven/digital-persona"
Repository = "https://github.com/hackshaven/digital-persona"
Issues = "https://github.com/hackshaven/digital-persona/issues"

